--- a/XGame/XSrc/X3DMAXPlugin/XAnimationExporter/XAnimationExporter.vcproj
+++ b/XGame/XSrc/X3DMAXPlugin/XAnimationExporter/XAnimationExporter.vcproj
@@ -482,7 +482,7 @@
 				AdditionalOptions="/LD @&quot;D:\SDK\3DMAX2010\maxsdk\ProjectSettings\AdditionalCompilerOptions.txt&quot;"
 				Optimization="0"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="&quot;E:\SDK\3ds Max 2010 SDK\maxsdk\include&quot;"
+				AdditionalIncludeDirectories="&quot;E:\SDK\3ds Max 2010 SDK\maxsdk\include&quot;;..\XInc\XExporter"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE;ISOLATION_AWARE_ENABLED=1;MODULE_NAME=$(TargetFileName)"
 				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
