--- a/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
+++ b/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
@@ -174,6 +174,18 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 		</Filter>
+		<Filter
+			Name="Win"
+			>
+		</Filter>
+		<Filter
+			Name="XOS"
+			>
+		</Filter>
+		<Filter
+			Name="Android"
+			>
+		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
 			>
