add some asset def

--- a/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
+++ b/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
@@ -164,6 +164,14 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\include\XMacro.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\XRefObject.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\XType.h"
 				>
 			</File>
