--- a/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.vcproj
+++ b/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.vcproj
@@ -67,7 +67,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="XPlatform_d.lib core.lib mesh.lib maxutil.lib rtmax.lib viewfile.lib"
+				AdditionalDependencies="XPlatform_d.lib core.lib mesh.lib maxutil.lib rtmax.lib viewfile.lib mnmath.lib edmodel.lib geom.lib gfx.lib maxscrpt.lib paramblk2.lib msxml2.lib igame.lib"
 				OutputFile=".\Debug\$(ProjectName).dll"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\..\XLib"
