--- a/XGame/XSrc/XEngine/XEngine/XEngine.vcproj
+++ b/XGame/XSrc/XEngine/XEngine/XEngine.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="XModel"
-	ProjectGUID="{CE5CBB3F-2A9C-4432-B94C-5E57FCDDF8B1}"
-	RootNamespace="XModel"
+	Name="XEngine"
+	ProjectGUID="{799FB8AA-DB31-4314-9665-58C47F149D84}"
+	RootNamespace="XEngine"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -41,7 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				AdditionalIncludeDirectories="..\XEngine\include;..\..\..\XInc"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_WIN_PLATFORM"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -60,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)\$(ProjectName)_d.lib"
+				AdditionalLibraryDirectories="..\..\..\XLib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -149,12 +150,28 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\src\XClient.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\XShell.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="头文件"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\include\XClient.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\XShell.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="资源文件"
