change the src constructor

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,44 @@
 /XGame/XSrc/XClient/Debug/*.obj
 /XGame/XSrc/XClient/Debug/*.idb
 /XGame/XSrc/XClient/Debug/*.pdb
+/XGame/XSrc/XEngine/XRender/Debug/*.obj
+/XGame/XSrc/XEngine/XResource/Debug/*.htm
+/XGame/XSrc/XEngine/XResource/Debug/*.pch
+/XGame/XSrc/XEngine/XResource/Debug/*.ib_tag
+/XGame/XSrc/XEngine/XResource/Debug/*.obj
+/XGame/XSrc/XEngine/XResource/Debug/*.idb
+/XGame/XSrc/XEngine/XResource/Debug/*.pdb
+/XGame/XSrc/XFile/Debug/*.htm
+/XGame/XSrc/XFile/Debug/*.obj
+/XGame/XSrc/XFile/Debug/*.idb
+/XGame/XSrc/XFile/Debug/*.pdb
+/XGame/XSrc/*.suo
+/XGame/XSrc/XClient/Debug/*.htm
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.htm
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.obj
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.sbr
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.dep
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.idb
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.pdb
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.bsc
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.exe
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.manifest
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.res
+/XGame/XSrc/XDemo/Demo_TestTexture/Debug/*.ilk
+/XGame/XSrc/XDemo/Demo_TestTexture/*.h~
+/XGame/XSrc/XDemo/Demo_TestTexture/*.log
+/XGame/XSrc/XDemo/Demo_TestTexture/*.ncb
+/XGame/XSrc/XDemo/Demo_TestTexture/*.plg
+/XGame/XSrc/XDemo/Demo_TestTexture/*.suo
+/XGame/XSrc/XDemo/Demo_TestTexture/*.user
+/XGame/XSrc/XDemo/标准样本/*.log
+/XGame/XSrc/XDemo/标准样本/*.suo
+/XGame/XSrc/XDemo/标准样本/*.user
+/XGame/XSrc/XEngine/XEngine/Debug/*.htm
+/XGame/XSrc/XEngine/XEngine/Debug/*.idb
+/XGame/XSrc/XEngine/XEngine/Debug/*.pdb
+/XGame/XSrc/XEngine/XEngine/*.user
+/XGame/XSrc/XEngine/XModel/Debug/*.htm
+/XGame/XSrc/XEngine/XModel/Debug/*.obj
+/XGame/XSrc/XEngine/XModel/Debug/*.idb
+/XGame/XSrc/XEngine/XModel/Debug/*.pdb
