--- a/XGame/XSrc/XFile/XFile.vcproj
+++ b/XGame/XSrc/XFile/XFile.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="XFile"
+	Name="XFile____"
 	ProjectGUID="{93DCB957-88A5-409D-867C-03DD5585A571}"
 	RootNamespace="XFile"
 	Keyword="Win32Proj"
