--- a/XGame/XSrc/XEngine/XEngine/XEngine.vcproj
+++ b/XGame/XSrc/XEngine/XEngine/XEngine.vcproj
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)\$(ProjectName)_d.lib"
 				AdditionalLibraryDirectories="..\..\..\XLib"
 			/>
 			<Tool
@@ -77,6 +78,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="xcopy /y /s /d &quot;$(TargetPath)&quot; &quot;..\..\..\XLib&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\include\*.h&quot; &quot;..\..\..\XInc\&quot;"
 			/>
 		</Configuration>
 		<Configuration
