addd git ingore

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,21 @@
 /XGame/XSrc/XEngine/XModel/Debug/*.obj
 /XGame/XSrc/XEngine/XModel/Debug/*.idb
 /XGame/XSrc/XEngine/XModel/Debug/*.pdb
+/XGame/XSrc/CoCoNat/*.user
+/XGame/XSrc/CoCoNat/Debug/*.htm
+/XGame/XSrc/CoCoNat/Debug/*.manifest
+/XGame/XSrc/CoCoNat/Debug/*.res
+/XGame/XSrc/CoCoNat/Debug/*.obj
+/XGame/XSrc/CoCoNat/Debug/*.pch
+/XGame/XSrc/CoCoNat/Debug/*.ib_tag
+/XGame/XSrc/CoCoNat/Debug/*.dep
+/XGame/XSrc/CoCoNat/Debug/*.idb
+/XGame/XSrc/CoCoNat/Debug/*.pdb
+/XGame/XSrc/CoCoNat/*.txt
+/XGame/XSrc/Debug/*.exe
+/XGame/XSrc/Debug/*.ilk
+/XGame/XSrc/XEngine/XEngine/Debug/*.obj
+/XGame/XInc/D3D9Render/*.h
+/XGame/XInc/Win/*.h
+/XGame/XInc/*.h
+/XGame/XLib/*.lib
