--- a/XGame/XSrc/XEngine/XTerrain/XTerrain.vcproj
+++ b/XGame/XSrc/XEngine/XTerrain/XTerrain.vcproj
@@ -41,7 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				AdditionalIncludeDirectories="..\..\..\XInc;..\XTerrain\include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_WIN_PLATFORM"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
