--- a/XGame/XSrc/XEngine/XModel/XModel.vcproj
+++ b/XGame/XSrc/XEngine/XModel/XModel.vcproj
@@ -166,6 +166,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\include\XAnimationEvent.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\XAnimationKey.h"
 				>
 			</File>
